Ajout style css

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
 <html>
-<head>
-	<meta charset="UTF-8">
-	<title>Mon Portfolio</title>
-</head>
 
-<body>
-</body>
+<head>
+    <meta charset="UTF-8">
+    <title>Mon Portfolio</title>
+    <link rel="stylesheet" href="css/style-portfolio.css"> </head>
+
+<body> </body>
+
 </html>
