--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mon Portfolio</title>
     <!-- BOOTSTRAP -->
     <!-- Latest compiled and minified CSS -->
@@ -14,6 +15,11 @@
     <!-- FIN BOOTSTRAP -->
 </head>
 
-<body> </body>
+<body>
+    <header>
+        <h1>Portfolio <small>Axel Floquet-Trillot</small></h1>
+        <nav></nav>
+    </header>
+</body>
 
 </html>
