--- a/index.html
+++ b/index.html
@@ -30,11 +30,18 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="#">Présentation Personnelle <span class="sr-only">(current)</span></a></li>
-                        <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Parcours <span class="caret"></span></a>
+                        <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Parcours<span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="#">Professionnel</a></li>
                                 <li role="separator" class="divider"></li>
                                 <li><a href="#">Personnel</a></li>
+                            </ul>
+                        </li>
+                        <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Fichiers et Liens<span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">CV (pdf)</a></li>
+                                <li role="separator" class="divider"></li>
+                                <li><a href="#">Site de l'APS</a></li>
                             </ul>
                         </li>
                     </ul>
