--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         </li>
                         <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Fichiers et Liens<span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="#">CV (pdf)</a></li>
+                                <li><a href="files/CV_Axel_Floquet-Trillot.pdf">CV (PDF)</a></li>
                                 <li role="separator" class="divider"></li>
                                 <li><a href="#">Site de l'APS</a></li>
                             </ul>
