--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="index.html">Présentation Personnelle</a></li>
+                        <li class="active"><a href="index.html">Présentation Personnelle <span class="sr-only">(current)</span></a></li>
                         <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Parcours<span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="parcours-professionnel.html">Professionnel</a></li>
@@ -46,7 +46,7 @@
                         </li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="contact.html">Contact<span class="sr-only">(current)</span></a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
