--- a/parcours-personnel.html
+++ b/parcours-personnel.html
@@ -34,7 +34,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="parcours-professionnel.html">Professionnel</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li><a href="parcours-personnel.html">Personnel</a></li>
+                                <li><a href="parcours-personnel.html">Personnel<span class="sr-only">(current)</span></a></li>
                             </ul>
                         </li>
                         <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Fichiers et Liens<span class="caret"></span></a>
@@ -46,7 +46,7 @@
                         </li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="contact.html">Contact<span class="sr-only">(current)</span></a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
