--- a/parcours-professionnel.html
+++ b/parcours-professionnel.html
@@ -32,7 +32,7 @@
                         <li class="active"><a href="index.html">Présentation Personnelle</a></li>
                         <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Parcours<span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="parcours-professionnel.html">Professionnel</a></li>
+                                <li><a href="parcours-professionnel.html">Professionnel<span class="sr-only">(current)</span></a></li>
                                 <li role="separator" class="divider"></li>
                                 <li><a href="parcours-personnel.html">Personnel</a></li>
                             </ul>
@@ -46,7 +46,7 @@
                         </li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="contact.html">Contact<span class="sr-only">(current)</span></a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
