--- a/parcours-professionnel.html
+++ b/parcours-professionnel.html
@@ -29,10 +29,10 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="index.html">Présentation Personnelle</a></li>
+                        <li><a href="index.html">Présentation Personnelle</a></li>
                         <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Parcours<span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="parcours-professionnel.html">Professionnel<span class="sr-only">(current)</span></a></li>
+                                <li class="active"><a href="parcours-professionnel.html">Professionnel<span class="sr-only">(current)</span></a></li>
                                 <li role="separator" class="divider"></li>
                                 <li><a href="parcours-personnel.html">Personnel</a></li>
                             </ul>
