--- a/parcours-personnel.html
+++ b/parcours-personnel.html
@@ -30,7 +30,7 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="index.html">Présentation Personnelle</a></li>
-                        <li class="dropdown"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Parcours<span class="caret"></span></a>
+                        <li class="dropdown active"> <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Parcours<span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="parcours-professionnel.html">Professionnel</a></li>
                                 <li role="separator" class="divider"></li>
