--- a/contact.html
+++ b/contact.html
@@ -54,6 +54,9 @@
             <!-- /.container-fluid -->
         </nav>
     </header>
+    <form action="#" method="get">
+        <button type="submit">Envoyer !</button>
+    </form>
     <!-- JQUERY ET BOOTSRAP JS-->
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
