--- a/contact.html
+++ b/contact.html
@@ -54,9 +54,13 @@
             <!-- /.container-fluid -->
         </nav>
     </header>
-    <form action="#" method="get">
-        <button type="submit">Envoyer !</button>
-    </form>
+    <div class="container">
+        <div class="col-md-10 col-offset-1">
+            <form action="#" method="get">
+                <button type="submit">Envoyer !</button>
+            </form>
+        </div>
+    </div>
     <!-- JQUERY ET BOOTSRAP JS-->
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
