--- a/contact.html
+++ b/contact.html
@@ -57,8 +57,11 @@
     <div class="container">
         <div class="col-md-10 col-offset-1">
             <form action="#" method="get">
-                <button type="submit">Envoyer !</button>
-            </form>
+                <label for="prenom">Prénom</label>
+                <input type="text" name="prenom" id="prenom">
+                <label for="nom">Nom</label>
+                <input type="text" name="nom" id="nom">
+                <input type="submit" id="envoyer" value="Envoyer !"> </form>
         </div>
     </div>
     <!-- JQUERY ET BOOTSRAP JS-->
