--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,8 @@
                 <input type="text" name="prenom" id="prenom">
                 <label for="nom">Nom</label>
                 <input type="text" name="nom" id="nom">
-                <input type="submit" id="envoyer" value="Envoyer !"> </form>
+                <button type="submit" id="envoyer">Envoyer !</button>
+            </form>
         </div>
     </div>
     <!-- JQUERY ET BOOTSRAP JS-->
