--- a/contact.html
+++ b/contact.html
@@ -58,9 +58,10 @@
         <div class="col-md-10 col-offset-1">
             <form action="#" method="get">
                 <label for="prenom">Prénom</label>
-                <input type="text" name="prenom" id="prenom">
+                <input type="text" name="prenom" id="prenom" class="form-centrol" required>
                 <label for="nom">Nom</label>
-                <input type="text" name="nom" id="nom">
+                <input type="text" name="nom" id="nom" class="form-centrol" required>
+                <label for="email">E-mail</label>
                 <button type="submit" id="envoyer">Envoyer !</button>
             </form>
         </div>
