--- a/contact.html
+++ b/contact.html
@@ -55,13 +55,15 @@
         </nav>
     </header>
     <div class="container">
-        <div class="col-md-10 col-offset-1">
-            <form action="#" method="get">
-                <label for="prenom">Prénom</label>
-                <input type="text" name="prenom" id="prenom" class="form-centrol" required>
-                <label for="nom">Nom</label>
-                <input type="text" name="nom" id="nom" class="form-centrol" required>
-                <label for="email">E-mail</label>
+        <div class="col-md-10 col-md-offset-1">
+            <form action="#" method="get" class="form-horizontal">
+                <div class="form-group">
+                    <label for="prenom">Prénom</label>
+                    <input type="text" name="prenom" id="prenom" class="form-centrol" required>
+                    <label for="nom">Nom</label>
+                    <input type="text" name="nom" id="nom" class="form-centrol" required>
+                    <label for="email">E-mail</label>
+                </div>
                 <button type="submit" id="envoyer">Envoyer !</button>
             </form>
         </div>
