--- a/contact.html
+++ b/contact.html
@@ -59,10 +59,10 @@
             <form action="#" method="get" class="form-horizontal">
                 <div class="form-group">
                     <label for="prenom" class="col-md-3">Prénom</label>
-                    <input type="text" name="prenom" id="prenom" class="form-centrol col-md-9" required> </div>
+                    <input type="text" name="prenom" id="prenom" class="form-control col-md-9" required> </div>
                 <div class="form-group">
                     <label for="nom" class="col-md-3">Nom</label>
-                    <input type="text" name="nom" id="nom" class="form-centrol col-md-9" required> </div>
+                    <input type="text" name="nom" id="nom" class="form-control col-md-9" required> </div>
                 <div class="form-group">
                     <label for="email" class="col-md-3">E-mail</label>
                     <input type="email" name="email" id="email" class="form-control col-md-9" required> </div>
