--- a/contact.html
+++ b/contact.html
@@ -58,14 +58,14 @@
         <div class="col-md-10 col-md-offset-1">
             <form action="#" method="get" class="form-horizontal">
                 <div class="form-group">
-                    <label for="prenom" class="col-md-3">Prénom</label>
-                    <input type="text" name="prenom" id="prenom" class="form-control col-md-9" required> </div>
+                    <label for="prenom" class="col-sm-3">Prénom</label>
+                    <input type="text" name="prenom" id="prenom" class="form-control col-sm-9" required> </div>
                 <div class="form-group">
-                    <label for="nom" class="col-md-3">Nom</label>
-                    <input type="text" name="nom" id="nom" class="form-control col-md-9" required> </div>
+                    <label for="nom" class="col-sm-3">Nom</label>
+                    <input type="text" name="nom" id="nom" class="form-control col-sm-9" required> </div>
                 <div class="form-group">
-                    <label for="email" class="col-md-3">E-mail</label>
-                    <input type="email" name="email" id="email" class="form-control col-md-9" required> </div>
+                    <label for="email" class="col-sm-3">E-mail</label>
+                    <input type="email" name="email" id="email" class="form-control col-sm-9" required> </div>
                 <button type="submit" id="envoyer">Envoyer !</button>
             </form>
         </div>
