--- a/contact.html
+++ b/contact.html
@@ -59,13 +59,21 @@
             <form action="#" method="get" class="form-horizontal">
                 <div class="form-group">
                     <label for="prenom" class="col-sm-3">Prénom</label>
-                    <input type="text" name="prenom" id="prenom" class="form-control col-sm-9" required> </div>
+                    <div class="col-sm-9">
+                        <input type="text" name="prenom" id="prenom" class="form-control" required>
+                    </div>
+                </div>
                 <div class="form-group">
                     <label for="nom" class="col-sm-3">Nom</label>
-                    <input type="text" name="nom" id="nom" class="form-control col-sm-9" required> </div>
+                    <div class="col-sm-9">
+                        <input type="text" name="nom" id="nom" class="form-control col-sm-9" required>
+                    </div>
+                </div>
                 <div class="form-group">
                     <label for="email" class="col-sm-3">E-mail</label>
-                    <input type="email" name="email" id="email" class="form-control col-sm-9" required> </div>
+                    <div class="col-sm-9">
+                        <input type="email" name="email" id="email" class="form-control col-sm-9" required> </div>
+                </div>
                 <button type="submit" id="envoyer">Envoyer !</button>
             </form>
         </div>
