--- a/contact.html
+++ b/contact.html
@@ -60,19 +60,22 @@
                 <div class="form-group">
                     <label for="prenom" class="col-sm-3">Prénom</label>
                     <div class="col-sm-9">
-                        <input type="text" name="prenom" id="prenom" class="form-control" required>
-                    </div>
+                        <input type="text" name="prenom" id="prenom" class="form-control" required> </div>
                 </div>
                 <div class="form-group">
                     <label for="nom" class="col-sm-3">Nom</label>
                     <div class="col-sm-9">
-                        <input type="text" name="nom" id="nom" class="form-control col-sm-9" required>
-                    </div>
+                        <input type="text" name="nom" id="nom" class="form-control" required> </div>
                 </div>
                 <div class="form-group">
                     <label for="email" class="col-sm-3">E-mail</label>
                     <div class="col-sm-9">
-                        <input type="email" name="email" id="email" class="form-control col-sm-9" required> </div>
+                        <input type="email" name="email" id="email" class="form-control" required> </div>
+                </div>
+                <div class="form-group">
+                    <label for="tel" class="col-sm-3">Téléphone</label>
+                    <div class="col-sm-9">
+                        <input type="tel" name="tel" id="tel" class="form-control" required> </div>
                 </div>
                 <button type="submit" id="envoyer">Envoyer !</button>
             </form>
