--- a/contact.html
+++ b/contact.html
@@ -58,26 +58,26 @@
         <div class="col-md-10 col-md-offset-1">
             <form action="#" method="get" class="form-horizontal">
                 <div class="form-group">
-                    <label for="prenom" class="col-sm-3">Prénom</label>
+                    <label for="prenom" class="col-sm-3 control-label">Prénom</label>
                     <div class="col-sm-9">
                         <input type="text" name="prenom" id="prenom" class="form-control" required> </div>
                 </div>
                 <div class="form-group">
-                    <label for="nom" class="col-sm-3">Nom</label>
+                    <label for="nom" class="col-sm-3 control-label">Nom</label>
                     <div class="col-sm-9">
                         <input type="text" name="nom" id="nom" class="form-control" required> </div>
                 </div>
                 <div class="form-group">
-                    <label for="email" class="col-sm-3">E-mail</label>
+                    <label for="email" class="col-sm-3 control-label">E-mail</label>
                     <div class="col-sm-9">
                         <input type="email" name="email" id="email" class="form-control" required> </div>
                 </div>
                 <div class="form-group">
-                    <label for="tel" class="col-sm-3">Téléphone</label>
+                    <label for="tel" class="col-sm-3 control-label">Téléphone</label>
                     <div class="col-sm-9">
                         <input type="tel" name="tel" id="tel" class="form-control" required> </div>
                 </div>
-                <button type="submit" id="envoyer">Envoyer !</button>
+                <button type="submit" id="envoyer" class="btn btn-default">Envoyer !</button>
             </form>
         </div>
     </div>
