--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,9 @@
                     <div class="col-sm-9">
                         <input type="tel" name="tel" id="tel" class="form-control" required> </div>
                 </div>
-                <button type="submit" id="envoyer" class="btn btn-default">Envoyer !</button>
+                <div class="form-group">
+                    <button type="submit" id="envoyer" class="btn btn-default">Envoyer !</button>
+                </div>
             </form>
         </div>
     </div>
