--- a/contact.html
+++ b/contact.html
@@ -58,36 +58,33 @@
         <div class="col-md-10 col-md-offset-1">
             <form action="#" method="get" class="form-horizontal">
                 <div class="form-group">
-                    <label for="prenom" class="col-sm-3 control-label">Prénom</label>
-                    <div class="col-sm-9">
+                    <label for="prenom" class="col-sm-2 control-label">Prénom</label>
+                    <div class="col-sm-4">
                         <input type="text" name="prenom" id="prenom" class="form-control" required> </div>
-                </div>
-                <div class="form-group">
-                    <label for="nom" class="col-sm-3 control-label">Nom</label>
-                    <div class="col-sm-9">
+                    <label for="nom" class="col-sm-2 control-label">Nom</label>
+                    <div class="col-sm-4">
                         <input type="text" name="nom" id="nom" class="form-control" required> </div>
                 </div>
                 <div class="form-group">
-                    <label for="email" class="col-sm-3 control-label">E-mail</label>
-                    <div class="col-sm-9">
-                        <input type="email" name="email" id="email" class="form-control" required> </div>
-                </div>
-                <div class="form-group">
-                    <label for="tel" class="col-sm-3 control-label">Téléphone</label>
-                    <div class="col-sm-9">
-                        <input type="tel" name="tel" id="tel" class="form-control" required> </div>
-                </div>
-                <div class="form-group">
-                    <button type="submit" id="envoyer" class="btn btn-default">Envoyer !</button>
-                </div>
+                    <div class="form-group">
+                        <label for="email" class="col-sm-2 control-label">E-mail</label>
+                        <div class="col-sm-4">
+                            <input type="email" name="email" id="email" class="form-control" required> </div>
+                        <label for="tel" class="col-sm-2 control-label">Téléphone</label>
+                        <div class="col-sm-4">
+                            <input type="tel" name="tel" id="tel" class="form-control" required> </div>
+                    </div>
+                    <div class="form-group text-center">
+                        <button type="submit" id="envoyer" class="btn btn-default">Envoyer !</button>
+                    </div>
             </form>
+            </div>
         </div>
-    </div>
-    <!-- JQUERY ET BOOTSRAP JS-->
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <!-- FIN JS -->
+        <!-- JQUERY ET BOOTSRAP JS-->
+        <!-- Latest compiled and minified JavaScript -->
+        <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+        <!-- FIN JS -->
 </body>
 
 </html>
