--- a/contact.html
+++ b/contact.html
@@ -73,6 +73,11 @@
                     <div class="col-sm-4">
                         <input type="tel" name="tel" id="tel" class="form-control" required> </div>
                 </div>
+                <div class="form-group">
+                    <div class="col-sm-12">
+                        <textarea name="message" id="message" cols="30" rows="10" placeholder="Votre message..."></textarea>
+                    </div>
+                </div>
                 <div class="form-group text-center">
                     <button type="submit" id="envoyer" class="btn btn-default">Envoyer !</button>
                 </div>
