--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
         </nav>
     </header>
     <div class="container">
-        <div class="col-md-10 col-md-offset-1">
+        <div class="col-md-10">
             <form action="#" method="get" class="form-horizontal">
                 <div class="form-group">
                     <label for="prenom" class="col-sm-2 control-label">Prénom</label>
@@ -75,7 +75,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-sm-12">
-                        <textarea name="message" id="message" cols="30" rows="10" placeholder="Votre message..."></textarea>
+                        <textarea name="message" id="message" class="form-control" cols="30" rows="10" placeholder="Votre message..."></textarea>
                     </div>
                 </div>
                 <div class="form-group text-center">
