--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
         </nav>
     </header>
     <div class="container">
-        <div class="col-md-10">
+        <div class="col-md-10 col-sm-offset-1">
             <form action="#" method="get" class="form-horizontal">
                 <div class="form-group">
                     <label for="prenom" class="col-sm-2 control-label">Prénom</label>
