--- a/contact.html
+++ b/contact.html
@@ -58,19 +58,19 @@
         <div class="col-md-10 col-sm-offset-1">
             <form action="#" method="get" class="form-horizontal">
                 <div class="form-group">
-                    <label for="prenom" class="col-sm-2 control-label">Prénom</label>
-                    <div class="col-sm-4">
+                    <label for="prenom" class="col-sm-1 control-label">Prénom : </label>
+                    <div class="col-sm-5">
                         <input type="text" name="prenom" id="prenom" class="form-control" required> </div>
-                    <label for="nom" class="col-sm-2 control-label">Nom</label>
-                    <div class="col-sm-4">
+                    <label for="nom" class="col-sm-1 control-label">Nom : </label>
+                    <div class="col-sm-5">
                         <input type="text" name="nom" id="nom" class="form-control" required> </div>
                 </div>
                 <div class="form-group">
-                    <label for="email" class="col-sm-2 control-label">E-mail</label>
-                    <div class="col-sm-4">
+                    <label for="email" class="col-sm-1 control-label">E-mail : </label>
+                    <div class="col-sm-5">
                         <input type="email" name="email" id="email" class="form-control" required> </div>
-                    <label for="tel" class="col-sm-2 control-label">Téléphone</label>
-                    <div class="col-sm-4">
+                    <label for="tel" class="col-sm-1 control-label">Téléphone : </label>
+                    <div class="col-sm-5">
                         <input type="tel" name="tel" id="tel" class="form-control" required> </div>
                 </div>
                 <div class="form-group">
