--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
     </header>
     <div class="container">
         <div class="col-md-10 col-sm-offset-1">
-            <form action="#" method="get" class="form-horizontal">
+            <form action="#" method="get" class="form-horizontal" id="form-contact">
                 <div class="form-group">
                     <label for="prenom" class="col-sm-2 control-label">Prénom : </label>
                     <div class="col-sm-4">
