--- a/parcours-professionnel.html
+++ b/parcours-professionnel.html
@@ -54,7 +54,12 @@
             <!-- /.container-fluid -->
         </nav>
     </header>
-    <p>2009 - 2012
+    <p>
+        <br>Février 2009
+        <br>Stage d'une semaine à Grand Optical
+        <br>Fabrication de verres de lunettes et montage
+        <br>Accueil des clients
+        <br>2009 - 2012
         <br>Etudes secondaires au Lycée Hoche à Versailles
         <br>Juin 2012
         <br>Obtention du Baccalauréat Général Scientifique, option Sciences de la Vie et de la Terre, spécialité Physique - Chimie
@@ -64,13 +69,12 @@
         <br>Reçu-collé au concours en 2014
         <br>2014 - 2016
         <br>Entrée en L2 Sciences pour la Santé (Université Paris Descartes) en équivalence en septembre 2014
-        <br>Obtention de la L2 en 1ère session
-        <br>Obtention de la L3 en 1ère session
+        <br>Obtention de la 2ème année de licence (L2) en 1ère session
+        <br>Obtention de la 3ème année de licence (L3) en 1ère session
         <br>Juin 2016
         <br>Obtention de la licence Sciences et Technologies - Mention Sciences pour la Santé
         <br>2016 - 2017
         <br>Entrée en 1ère année d'Ingésup (B1) sur le campus d'Ynov Paris
-
     </p>
     <!-- JQUERY ET BOOTSRAP JS-->
     <!-- Latest compiled and minified JavaScript -->
