--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,7 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <script type="text/javascript" src="js/mail.js"></script>
 </head>
 
 <body>
@@ -55,21 +56,28 @@
         </nav>
     </header>
     <div class="container">
-        <div class="col-md-10 col-sm-offset-1">
+        <div class="col-md-10 col-md-offset-1">
+            <p>Vous pouvez me contacter pour toute questions via le formulaire ci-dessous ou directement à mon adresse mail :
+                <script>
+                    genererAdresse();
+                </script>
+            </p>
+        </div>
+        <div class="col-md-10 col-md-offset-1">
             <form action="#" method="get" class="form-horizontal" id="form-contact">
                 <div class="form-group">
-                    <label for="prenom" class="col-sm-2 control-label">Prénom : </label>
+                    <label for="prenom" class="col-sm-2 control-label">Prénom</label>
                     <div class="col-sm-4">
                         <input type="text" name="prenom" id="prenom" class="form-control" required> </div>
-                    <label for="nom" class="col-sm-2 control-label">Nom : </label>
+                    <label for="nom" class="col-sm-2 control-label">Nom</label>
                     <div class="col-sm-4">
                         <input type="text" name="nom" id="nom" class="form-control" required> </div>
                 </div>
                 <div class="form-group">
-                    <label for="email" class="col-sm-2 control-label">E-mail : </label>
+                    <label for="email" class="col-sm-2 control-label">E-mail</label>
                     <div class="col-sm-4">
                         <input type="email" name="email" id="email" class="form-control" required> </div>
-                    <label for="tel" class="col-sm-2 control-label">Téléphone : </label>
+                    <label for="tel" class="col-sm-2 control-label">Téléphone</label>
                     <div class="col-sm-4">
                         <input type="tel" name="tel" id="tel" class="form-control" required> </div>
                 </div>
