--- a/contact.html
+++ b/contact.html
@@ -56,40 +56,44 @@
         </nav>
     </header>
     <div class="container">
-        <div class="col-md-10 col-md-offset-1">
-            <p>Vous pouvez me contacter pour toute questions via le formulaire ci-dessous ou directement à mon adresse mail :
-                <script>
-                    genererAdresse();
-                </script>
-            </p>
+        <div class="row">
+            <div class="col-md-10 col-md-offset-1">
+                <p>Vous pouvez me contacter pour toute questions via le formulaire ci-dessous ou directement à mon adresse mail :
+                    <script>
+                        genererAdresse();
+                    </script>
+                </p>
+            </div>
         </div>
-        <div class="col-md-10 col-md-offset-1">
-            <form action="#" method="get" class="form-horizontal" id="form-contact">
-                <div class="form-group">
-                    <label for="prenom" class="col-sm-2 control-label">Prénom</label>
-                    <div class="col-sm-4">
-                        <input type="text" name="prenom" id="prenom" class="form-control" required> </div>
-                    <label for="nom" class="col-sm-2 control-label">Nom</label>
-                    <div class="col-sm-4">
-                        <input type="text" name="nom" id="nom" class="form-control" required> </div>
-                </div>
-                <div class="form-group">
-                    <label for="email" class="col-sm-2 control-label">E-mail</label>
-                    <div class="col-sm-4">
-                        <input type="email" name="email" id="email" class="form-control" required> </div>
-                    <label for="tel" class="col-sm-2 control-label">Téléphone</label>
-                    <div class="col-sm-4">
-                        <input type="tel" name="tel" id="tel" class="form-control" required> </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-sm-12">
-                        <textarea name="message" id="message" class="form-control" cols="30" rows="10" placeholder="Votre message..."></textarea>
+        <div class="row">
+            <div class="col-md-10 col-md-offset-1">
+                <form action="#" method="get" class="form-horizontal" id="form-contact">
+                    <div class="form-group">
+                        <label for="prenom" class="col-sm-2 control-label">Prénom</label>
+                        <div class="col-sm-4">
+                            <input type="text" name="prenom" id="prenom" class="form-control" required title="Entrez votre prénom" placeholder="Votre prénom"> </div>
+                        <label for="nom" class="col-sm-2 control-label">Nom</label>
+                        <div class="col-sm-4">
+                            <input type="text" name="nom" id="nom" class="form-control" required title="Entrez votre nom de famille" placeholder="Votre nom de famille"> </div>
                     </div>
-                </div>
-                <div class="form-group text-center">
-                    <button type="submit" id="envoyer" class="btn btn-default">Envoyer !</button>
-                </div>
-            </form>
+                    <div class="form-group">
+                        <label for="email" class="col-sm-2 control-label">E-mail</label>
+                        <div class="col-sm-4">
+                            <input type="email" name="email" id="email" class="form-control" required title="Entrez votre adresse mail" placeholder="adresse@example.com"> </div>
+                        <label for="tel" class="col-sm-2 control-label">Téléphone</label>
+                        <div class="col-sm-4">
+                            <input type="tel" name="tel" id="tel" class="form-control" required title="Entrez votre numéro de téléphone" placeholder="+33 X XX XX XX XX"> </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-sm-12">
+                            <textarea name="message" id="message" class="form-control" cols="30" rows="10" placeholder="Votre message..." required></textarea>
+                        </div>
+                    </div>
+                    <div class="form-group text-center">
+                        <button type="submit" id="envoyer" class="btn btn-default">Envoyer !</button>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
     <!-- JQUERY ET BOOTSRAP JS-->
