--- a/parcours-professionnel.html
+++ b/parcours-professionnel.html
@@ -54,28 +54,53 @@
             <!-- /.container-fluid -->
         </nav>
     </header>
-    <p>
-        <br>Février 2009
-        <br>Stage d'une semaine à Grand Optical
-        <br>Fabrication de verres de lunettes et montage
-        <br>Accueil des clients
-        <br>2009 - 2012
-        <br>Etudes secondaires au Lycée Hoche à Versailles
-        <br>Juin 2012
-        <br>Obtention du Baccalauréat Général Scientifique, option Sciences de la Vie et de la Terre, spécialité Physique - Chimie
-        <br>Mention Bien
-        <br>2012 - 2014
-        <br>PACES à Paris Descartes Redoublement en 2013
-        <br>Reçu-collé au concours en 2014
-        <br>2014 - 2016
-        <br>Entrée en L2 Sciences pour la Santé (Université Paris Descartes) en équivalence en septembre 2014
-        <br>Obtention de la 2ème année de licence (L2) en 1ère session
-        <br>Obtention de la 3ème année de licence (L3) en 1ère session
-        <br>Juin 2016
-        <br>Obtention de la licence Sciences et Technologies - Mention Sciences pour la Santé
-        <br>2016 - 2017
-        <br>Entrée en 1ère année d'Ingésup (B1) sur le campus d'Ynov Paris
-    </p>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <!-- DEBUT Onglets -->
+                <ul class="nav nav-pills nav-justified">
+                    <li class="active" role="presentation"><a href="#etudes" aria-controls="etudes" data-toggle="pill">Etudes</a></li>
+                    <li role="presentation"><a href="#stages" aria-controls="stages" data-toggle="pill">Stages</a></li>
+                </ul>
+                <!-- FIN Onglets -->
+                <!-- DEBUT Contenu Onglets -->
+                <dl class="dl-horizontal tab-pane" id="etudes">
+                    <dt>2009 - 2012</dt>
+                    <dd>Etudes secondaires au Lycée Hoche à Versailles</dd>
+                    <dt>Juin 2012</dt>
+                    <dd>
+                        Obtention du Baccalauréat Général Scientifique, option Sciences de la Vie et de la Terre, spécialité Physique - Chimie
+                        <br>Mention Bien
+                    </dd>
+                    <dt>2012 - 2014</dt>
+                    <dd>
+                        PACES à Paris Descartes
+                        <br>Redoublement en 2013
+                        <br>Reçu-collé au concours en 2014
+                    </dd>
+                    <dt>2014 - 2016</dt>
+                    <dd>
+                        Entrée en L2 Sciences pour la Santé (Université Paris Descartes) en équivalence en septembre 2014
+                        <br>Obtention de la 2ème année de licence (L2) en 1ère session
+                        <br>Obtention de la 3ème année de licence (L3) en 1ère session
+                    </dd>
+                    <dt>Juin 2016</dt>
+                    <dd>Obtention de la licence Sciences et Technologies - Mention Sciences pour la Santé</dd>
+                    <dt>2016 - 2017</dt>
+                    <dd>Entrée en 1ère année d'Ingésup (B1) sur le campus d'Ynov Paris</dd>
+                </dl>
+                <dl class="dl-horizontal tab-pane" id="stages">
+                    <dt>Février 2009</dt>
+                    <dd>
+                        Stage d'une semaine à Grand Optical
+                        <br>Fabrication de verres de lunettes et montage
+                        <br>Accueil des clients
+                    </dd>
+                </dl>
+                <!-- FIN Conetnu Onglets -->
+            </div>
+        </div>
+    </div>
     <!-- JQUERY ET BOOTSRAP JS-->
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
