Ajout modification contact

--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
                             <ul class="dropdown-menu">
                                 <li><a target="_blank" href="files/CV_Axel_Floquet-Trillot.pdf">CV (PDF)</a></li>
                                 <li role="separator" class="divider"></li>
-                                <li><a href="http://aps-paris5.fr">Site de l'APS</a></li>
+                                <li><a target="_blank" href="http://aps-paris5.fr">Site de l'APS</a></li>
                             </ul>
                         </li>
                     </ul>
