Modification parcours professionnel

--- a/parcours-professionnel.html
+++ b/parcours-professionnel.html
@@ -61,43 +61,30 @@
                 <ul class="nav nav-pills nav-justified" role="tablist">
                     <li class="active" role="presentation"><a href="#etudes" aria-controls="etudes" role="tab" data-toggle="pill">Etudes</a></li>
                     <li role="presentation"><a href="#stages" aria-controls="stages" role="tab" data-toggle="pill">Stages</a></li>
+                    <li role="presentation"><a href="#associatif" aria-controls="associatif" role="tab" data-toggle="pill">Associatif</a></li>
                 </ul>
                 <!-- FIN Onglets -->
                 <!-- DEBUT Contenu Onglets -->
                 <div class="tab-content">
-                    <dl class="dl-horizontal tab-pane fade in active" id="etudes">
-                        <dt>2009 - 2012</dt>
-                        <dd>Etudes secondaires au Lycée Hoche à Versailles</dd>
-                        <dt>Juin 2012</dt>
-                        <dd>
-                            Obtention du Baccalauréat Général Scientifique, option Sciences de la Vie et de la Terre, spécialité Physique - Chimie
-                            <br>Mention Bien
-                        </dd>
-                        <dt>2012 - 2014</dt>
-                        <dd>
-                            PACES à Paris Descartes
+                    <dl class="dl-horizontal tab-pane fade in active" id="etudes"> <dt>2009 - 2012</dt>
+                        <dd>Etudes secondaires au Lycée Hoche à Versailles</dd> <dt>Juin 2012</dt>
+                        <dd> Obtention du Baccalauréat Général Scientifique, option Sciences de la Vie et de la Terre, spécialité Physique - Chimie
+                            <br>Mention Bien </dd> <dt>2012 - 2014</dt>
+                        <dd> PACES à Paris Descartes
                             <br>Redoublement en 2013
-                            <br>Reçu-collé au concours en 2014
-                        </dd>
-                        <dt>2014 - 2016</dt>
-                        <dd>
-                            Entrée en L2 Sciences pour la Santé (Université Paris Descartes) en équivalence en septembre 2014
+                            <br>Reçu-collé au concours en 2014 </dd> <dt>2014 - 2016</dt>
+                        <dd> Entrée en L2 Sciences pour la Santé (Université Paris Descartes) en équivalence en septembre 2014
                             <br>Obtention de la 2ème année de licence (L2) en 1ère session
-                            <br>Obtention de la 3ème année de licence (L3) en 1ère session
-                        </dd>
-                        <dt>Juin 2016</dt>
-                        <dd>Obtention de la licence Sciences et Technologies - Mention Sciences pour la Santé</dd>
-                        <dt>2016 - 2017</dt>
+                            <br>Obtention de la 3ème année de licence (L3) en 1ère session </dd> <dt>Juin 2016</dt>
+                        <dd>Obtention de la licence Sciences et Technologies - Mention Sciences pour la Santé</dd> <dt>2016 - 2017</dt>
                         <dd>Entrée en 1ère année d'Ingésup (B1) sur le campus d'Ynov Paris</dd>
                     </dl>
-                    <dl class="dl-horizontal tab-pane fade" id="stages">
-                        <dt>Février 2009</dt>
-                        <dd>
-                            Stage d'une semaine à Grand Optical
+                    <dl class="dl-horizontal tab-pane fade" id="stages"> <dt>Février 2009</dt>
+                        <dd> Stage d'une semaine à Grand Optical
                             <br>Fabrication de verres de lunettes et montage
-                            <br>Accueil des clients
-                        </dd>
+                            <br>Accueil des clients </dd>
                     </dl>
+                    <dl class="dl-horizontal tab-pane fade" id="associatif"> </dl>
                 </div>
                 <!-- FIN Conetnu Onglets -->
             </div>
