Ajout parcours professionnel

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mon Portfolio</title>
+    <link rel="stylesheet" href="css/style-general.css">
     <link rel="stylesheet" href="css/style-menu.css">
     <!-- BOOTSTRAP -->
     <!-- Latest compiled and minified CSS -->
@@ -32,7 +33,7 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" href="index.html">
-                        <h1>Portfolio <small>Axel Floquet-Trillot</small></h1>
+                        <h1>Axel FT<small>Portfolio</small></h1>
                     </a>
                 </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
